--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta charset="utf8">
 		<title>some circle data</title>
 		<link rel='stylesheet' href='style.css'>
-		<script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
+		<script type="text/javascript" src="lib/jquery-3.1.0.min.js"></script>
+		<script type="text/javascript" src="lib/d3.v4.min.js"></script>
 		<script type="text/javascript" src="data.js"></script>
 	</head>
 	<body>
